--- a/Class/高等数学下.md
+++ b/Class/高等数学下.md
@@ -1,4 +1,16 @@
-## 1
+[^o^]: 截图真好用
+
+## 一些公式
+
+### Cramer法则
+
+![image-20220411163945897](https://s2.loli.net/2022/04/11/IYdBaFD9ey6CSsO.png)
+
+
+
+
+
+## 1 全微分与偏导（猴）
 
 ### 1.1 多元偏导
 
@@ -34,7 +46,7 @@
 
 
 
-## 2
+## 2 全微分与偏导应用（猴）
 
 ### 2.1 多元函数全微分
 
@@ -88,5 +100,191 @@
 
 ![image-20220404180110253](https://s2.loli.net/2022/04/04/a3jTw7dDhv2u9se.png)
 
-## 3
+
+
+## 3 宋浩
+
+
+
+### 3.1空间曲线切线与法平面
+
+![image-20220411163319854](https://s2.loli.net/2022/04/11/62FDyroBwTtVYIO.png)
+
+
+
+求曲线x²+y²+z²＝6，x+y+z＝0在点（1，-2，1）处的切线及法平面方程。
+
+取x为参数对整式求导，利用Cramer法则求解y与z的导数
+
+![image-20220411164611971](https://s2.loli.net/2022/04/11/r4qIydUKkposwQJ.png)
+
+
+
+### 3.2空间曲面切平面与法线
+
+![image-20220411165841407](https://s2.loli.net/2022/04/11/muSgKVvqtpCl28c.png)
+
+
+
+### 3.3方向导数
+
+点沿着特定方向的导数
+
+![image-20220411171543387](https://s2.loli.net/2022/04/11/5TRgZUI2bY7H8Wf.png)
+
+方向导数存在，偏导数不一定存在（偏导数得直线）
+
+
+
+例题：
+
+![image-20220411173259660](https://s2.loli.net/2022/04/11/1YHO48yXdl2CZwq.png)
+
+
+
+### 3.4梯度
+
+梯度是向量
+
+![image-20220411180214041](https://s2.loli.net/2022/04/11/Nz7YjCxd8ynbpoE.png)
+
+可理解为等值线
+
+
+
+梯度方向就是等值线在这点的法线方向	，梯度的模就是沿法线方向的方向导数
+
+![image-20220411185934664](https://s2.loli.net/2022/04/11/iYJtkV5EfzPUrhv.png)
+
+
+
+### 3.5 多元函数求极值
+
+![image-20220418162800860](https://s2.loli.net/2022/04/18/YEG4xHwLB8RufKS.png)
+
+
+
+## 4 空间几何（猴）
+
+#### 空间向量与计算
+
+<img src="https://s2.loli.net/2022/04/18/qmJPQo7tjDOlIrg.png" alt="image-20220418163620058" style="zoom: 80%;" />
+
+
+
+<img src="https://s2.loli.net/2022/04/18/WSMu2NVARszHQL3.png" alt="image-20220418165010492" style="zoom:80%;" />
+
+叉乘的值为向量形成的平行四边形面积，向量平行时，叉乘为0
+
+
+
+#### 4.1空间几何上
+
+##### 4.1.1 过三点的平面方程
+
+......
+
+ Ax+By+Cz+D=0，代入三点
+
+
+
+#### *4.n.n 面与向量的关系*
+
+![image-20220418170052147](https://s2.loli.net/2022/04/18/gxOwVZoUPAWdTnJ.png)
+
+![image-20220418170332044](https://s2.loli.net/2022/04/18/vHU5V4DlebRBzhO.png)
+
+![image-20220418170704875](https://s2.loli.net/2022/04/18/CZEaBj2zvd1J3Kg.png)
+
+![image-20220418171539069](https://s2.loli.net/2022/04/18/qoOTjYJigdV8PIS.png)
+
+![image-20220418171730950](https://s2.loli.net/2022/04/18/YvI4kQARhLGCpy9.png)
+
+![image-20220418171953087](https://s2.loli.net/2022/04/18/KItHT53MiX1OfGA.png)
+
+
+
+<img src="https://s2.loli.net/2022/04/18/jUTX7mvzYuISNcL.png" alt="image-20220418172747895" style="zoom:150%;" />
+
+<img src="https://s2.loli.net/2022/04/18/CPhEJ4m1LUz2n3l.png" alt="image-20220418172848798" style="zoom:150%;" />
+
+![image-20220418173315782](https://s2.loli.net/2022/04/18/7YOCQmEnXwubap3.png)
+
+
+
+![image-20220422180218525](https://s2.loli.net/2022/04/22/qvW4wSmDM2geXOf.png)
+
+
+
+### *附：曲面及方程（宋浩）
+
+#### 旋转曲面
+
+![image-20220422165833224](https://s2.loli.net/2022/04/22/7Mavo3OgrsmDhQb.png)
+
+绕什么旋转，什么不变
+
+![image-20220422170703216](https://s2.loli.net/2022/04/22/nufQNEKk7WzxPYV.png)
+
+![image-20220422170805928](https://s2.loli.net/2022/04/22/HuRa7oilyBQJ4dX.png)
+
+
+
+
+
+## 5 二重积分（猴）
+
+#### 5.1 计算二重积分
+
+1.把未知数集中到后面
+
+2.计算后半部分积分
+
+3.计算结果带入前半部分中
+
+
+
+![image-20220421082709702](https://s2.loli.net/2022/04/21/nTyDzPQlGKYsr8b.png)
+
+
+
+#### 5.2交换积分次序
+
+1.把未知数集中到后面
+
+2.坐标系中画出积分区域
+
+3.将x和y的表达形式交换
+
+4.写出交换后结果
+
+![image-20220421085157920](https://s2.loli.net/2022/04/21/yQzhMYEc2lCZPmr.png)
+
+![image-20220421085536779](https://s2.loli.net/2022/04/21/xCwFBReL5M6YS1T.png)
+
+
+
+#### 5.3 计算ff格式的二重积分
+
+![image-20220421090202454](https://s2.loli.net/2022/04/21/UFHSmQYg3A5EL4q.png)
+
+
+
+#### 5.4 积分区域与圆有关的二重积分
+
+![image-20220421090746491](https://s2.loli.net/2022/04/21/BEmvI3aCVz1Lswj.png)
+
+
+
+#### 5.5 积分区域对称的二重积分
+
+![image-20220421090933721](https://s2.loli.net/2022/04/21/myvNeB9wSKYgu2M.png)
+
+
+
+
+
+
+
+
 
