--- a/Class/离散数学.md
+++ b/Class/离散数学.md
@@ -1,10 +1,18 @@
 ## 1.命题逻辑
 
+### 等值式
+
+
+
 ![image-20220430151845630](https://s2.loli.net/2022/04/30/n93RHvfoVmyJsq1.png)
 
 
 
 ![image-20220430152119991](https://s2.loli.net/2022/04/30/Ab94ZHoQzKe7LhU.png)
+
+
+
+### 主析取范式与主合取范式
 
 
 
@@ -16,31 +24,119 @@
 
 
 
+### 命题逻辑的推理
 
 
 
+![image-20220513175335202](https://s2.loli.net/2022/05/13/xvlnOoWGe3N8Lcr.png)
 
 
 
+![image-20220513185128628](https://s2.loli.net/2022/05/13/Nhm92FKZvk8IaSb.png)
 
 
 
+### 归谬法
+
+![image-20220513185733527](https://s2.loli.net/2022/05/13/DBqsYLnIQO9aCWh.png)
 
 
 
+## 2.谓词逻辑
+
+### 谓词逻辑命题符号化
+
+![image-20220513193141944](https://s2.loli.net/2022/05/13/8YAQKZkt3hR9r2E.png)
+
+![image-20220513193243346](https://s2.loli.net/2022/05/13/cOwVTNiLC8PvYh6.png)
+
+![image-20220513193401489](https://s2.loli.net/2022/05/13/qnXG5t69jv3wPyp.png)
 
 
 
+**全称量词中间连接词用*蕴含*，存在量词中间连接词用*合取***
+
+![image-20220513193612699](https://s2.loli.net/2022/05/13/XfGqybZEINPeQ38.png)
 
 
 
+### 谓词逻辑公式及其解释
 
 
 
+![image-20220513193926574](https://s2.loli.net/2022/05/13/QxyH3UN4WfAePKE.png)
+
+多个量词同时出现，不能随意调换位置
 
 
 
+![image-20220513194336545](https://s2.loli.net/2022/05/13/UmPynNXf7kA9EeG.png)
 
+
+
+### 等值式与置换规则
+
+![image-20220513195235857](https://s2.loli.net/2022/05/13/GhwHrgsmX5874Oz.png)
+
+![image-20220513195719578](https://s2.loli.net/2022/05/13/56ZxOfNEpFhiJKH.png)
+
+
+
+![image-20220513200151755](https://s2.loli.net/2022/05/13/cgYbsOp13L6v8lz.png)
+
+
+
+消去量词：
+
+![image-20220513200544201](https://s2.loli.net/2022/05/13/UwgdWni5vEl9amS.png)
+
+![image-20220513200651629](https://s2.loli.net/2022/05/13/w9oEadzqOWcLh1l.png)
+
+
+
+### 前束范式
+
+![image-20220513201216468](https://s2.loli.net/2022/05/13/iRSZyWkL653fYjQ.png)
+
+前束范式前也不能有否定
+
+
+
+![image-20220513201904861](https://s2.loli.net/2022/05/13/OIme2nRDvZuStLy.png)
+
+
+
+### 谓词逻辑的推理理论
+
+![image-20220513202041842](https://s2.loli.net/2022/05/13/EOsmXZxnY5J1UTW.png)
+
+
+
+![image-20220513202855697](https://s2.loli.net/2022/05/13/jwPdMIQJ7A59cTv.png)
+
+
+
+![image-20220513203301414](https://s2.loli.net/2022/05/13/UbIXDP9igmhGHwB.png)
+
+红字不用太在意
+
+
+
+### 推理证明题
+
+![image-20220513203654582](https://s2.loli.net/2022/05/13/x27oH9b5kGqiwnR.png)
+
+特点：要消去量词，而且要先消去存在量词
+
+
+
+![image-20220513203924792](https://s2.loli.net/2022/05/13/UYlW79JwenotmVr.png)
+
+
+
+归谬法：
+
+![image-20220513204442070](https://s2.loli.net/2022/05/13/g92TCYUmVHr4WFk.png)
 
 
 
