--- a/Class/高等数学下.md
+++ b/Class/高等数学下.md
@@ -284,6 +284,18 @@
 
 
 
+## 6 三重积分（猴）
+
+
+
+![image-20220505092708795](https://s2.loli.net/2022/05/05/9LNufkRUrcmvqwB.png)
+
+
+
+![image-20220505092923236](https://s2.loli.net/2022/05/05/eW5Fht6ZfCqH4us.png)
+
+
+
 
 
 
